--- a/Index.html
+++ b/Index.html
@@ -278,5 +278,12 @@
 
     <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
     <script src="asva_web3_app.js"></script> 
+    <div class="tokenomics-info">
+        </div>
+
+    
+    <script src="https://cdn.ethers.io/lib/ethers-5.7.umd.min.js"></script>
+    
+    <script src="asva_web3_app.js"></script> 
 </body>
-</html>
+</htm>
