--- a/index.html
+++ b/index.html
@@ -1,1 +1,145 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<title>JAULA-COIN 🧸💖</title>
+<style>
+  body{font-family:'Comic Sans MS',cursive,sans-serif;background:linear-gradient(135deg,#ff9a9e,#fad0c4);margin:0;height:100vh;display:flex;justify-content:center;align-items:center;color:#333}
+  .container{background:#fff;border-radius:30px;box-shadow:0 20px 60px rgba(0,0,0,0.2);padding:30px;border-radius:30px;text-align:center;max-width:600px;width:90%}
+  h1{font-size:3em;margin:0;color:#ff6b6b}p{font-size:1.3em;margin:15px 0}
+  .coin{font-size:80px;animation:float 3s infinite ease-in-out}
+  button{background:#ff6b6b;color:white;border:none;padding:15px 30px;margin:10px;font-size:1.3em;border-radius:50px;cursor:pointer;box-shadow:0 10px 20px rgba(255,107,107,0.4);transition:0.3s}
+  button:hover{transform:scale(1.1);background:#ff5252}
+  #log{background:#fff9f9;border-radius:15px;padding:15px;max-height:200px;overflow-y:auto;margin-top:20px;font-size:1.1em;border:3px dashed #ffb3b3}
+  .heart{color:#ff6b6b;font-size:1.5em}
+  @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-20px)}}
+</style>
+</head>
+<body>
 
+<div class="container">
+  <div class="coin">🪙</div>
+  <h1>¡Bienvenido a JAULA-COIN! 🧸💖</h1>
+  <p>La blockchain más tierna y rebelde del mundo<br><small>(hecha con amor y sin jaulas el 19/11/2025)</small></p>
+
+  <p><strong>Tu dirección mágica:</strong><br><span id="address" style="font-size:1.2em;color:#ff6b6b">cargando...</span></p>
+  <p><strong>Balance actual:</strong> <span id="balance" style="font-size:2em;color:#ff6b6b">0</span> JAULA <3</p>
+
+  <button onclick="minar()">🛠️ Minar bloque (69 JAULA de premio)</button>
+  <button onclick="verCadena()">📜 Ver toda la cadena</button>
+
+  <div id="log">Aquí aparecerán los mensajitos tiernos cuando mines 💌</div>
+</div>
+
+<audio id="ding" src="https://cdn.grok.x.ai/assets/audio/notification-1.mp3"></audio>
+
+<script>
+// ==================== JAULA-COIN v1.2 – Versión tierna ====================
+let blockchain = {
+  chain: [],
+  pending: [],
+  difficulty: 4,
+  reward: 69
+};
+
+let privateKeyHex = localStorage.getItem("jaula_private") || null;
+let myAddress = "";
+
+// Generar o cargar clave privada (¡es tu osito secreto!)
+if (!privateKeyHex) {
+  const crypto = window.crypto || window.msCrypto;
+  const array = new Uint8Array(32);
+  crypto.getRandomValues(array);
+  privateKeyHex = Array.from(array, b => b.toString(16).padStart(2,'0')).join('');
+  localStorage.setItem("jaula_private", privateKeyHex);
+  logMessage("¡Nuevo osito secreto creado y guardado en tu navegador 🧸");
+}
+
+// Dirección pública (SHA256 truncada como en la versión real)
+async function getAddress() {
+  const msg = new TextEncoder().encode(privateKeyHex);
+  const hashBuffer = await crypto.subtle.digest('SHA-256', msg);
+  const hashArray = Array.from(new Uint8Array(hashBuffer));
+  return hashArray.map(b => b.toString(16).padStart(2,'0')).join('').substring(0,40);
+}
+
+// Block y hash (todo simplificado pero 100% válido)
+function createHash(block) {
+  {
+  const str = JSON.stringify(block);
+  return crypto.subtle.digest('SHA-256', new TextEncoder().encode(str))
+    .then(buf => Array.from(new Uint8Array(buf)).map(b=>b.toString(16).padStart(2,'0')).join(''));
+}
+
+async function createGenesis() {
+  const genesis = {index:0, previous:"0000", timestamp:Date.now(), data:["Genesis: Rompimos la jaula con amor – 19/11/2025"], nonce:0};
+  genesis.hash = await createHash(genesis);
+  blockchain.chain.push(genesis);
+  logMessage("¡Bloque Génesis creado con mucho cariño! 🌸");
+}
+
+async function minar() {
+  const rewardTx = {from:"network", to:myAddress, amount:69, message:"¡Premio por ser tan valiente! 💕"};
+  blockchain.pending.push(rewardTx);
+
+  const block = {
+    index: blockchain.chain.length,
+    previous: blockchain.chain[blockchain.chain.length-1].hash.substring(0,8),
+    timestamp: Date.now(),
+    data: [...blockchain.pending],
+    nonce: 0
+  };
+
+  logMessage(`Minando bloque ${block.index}... esto puede tardar unos segunditos ⏳`);
+
+  while (true) {
+    block.hash = await createHash(block);
+    if (block.hash.startsWith("0".repeat(blockchain.difficulty))) break;
+    block.nonce++;
+  }
+
+  blockchain.chain.push(block);
+  blockchain.pending = [];
+  logMessage(`¡BLOQUE MINADO! ✨ Ahora tienes +69 JAULA`);
+  document.getElementById('ding').play();
+  updateBalance();
+}
+
+function updateBalance() {
+  let bal = 0;
+  blockchain.chain.forEach(block => {
+    block.data.forEach(tx => {
+      if (tx.to === myAddress) bal += tx.amount || 0;
+      if (tx.from === myAddress) bal -= tx.amount || 0;
+    });
+  });
+  document.getElementById("balance").textContent = bal;
+}
+
+function logMessage(msg) {
+  const log = document.getElementById("log");
+  const p = document.createElement("p");
+  p.innerHTML = `💌 ${new Date().toLocaleTimeString()} → ${msg}`;
+  log.prepend(p); // arriba del todo
+}
+
+async function verCadena() {
+  console.clear();
+  console.log("=== JAULA-COIN CADENA COMPLETA ===);
+  for (let b of blockchain.chain) {
+    console.log(b);
+  }
+  alert("Abre la consola (F12) para ver toda la cadena completa 🐻");
+}
+
+// =============== INICIO AUTOMÁTICO ===============
+window.onload = async () => {
+  await createGenesis();
+  myAddress = await getAddress();
+  document.getElementById("address").textContent = myAddress;
+  updateBalance();
+  logMessage("¡Hola amiguito! Tu blockchain tierna ya está lista para romper jaulas con amor ❤️");
+};
+</script>
+
+</body></html>
